- Fixed minor bug relating to variable loading (thanks Kharthus)
- Fixed bug on showing color of item names for quest rewards.
- Removed old "Call to Arms" battleground daily quests along with 2 other obsolete Alterac Valley quests.
- Alterac Valley map locations updated.
- Coordinates for a number of quests are now more accurate.
- Localizations updated: deDE, enUS, zhCN

- Patch 4.3 introduced a number of changes to Burning Crusade and Wrath of the Lich King quests.  These were updated.
	- Hellfire Citadel: Hellfire Ramparts
	- Hellfire Citadel: Blood Furnace
	- Hellfire Citadel: Shattered Halls
	- Coilfang Reservoir: The Slave Pens
	- Coilfang Reservoir: The Steamvault
	- Coilfang Reservoir: The Underbog
	- Auchindoun: Auchenai Crypts
	- Auchindoun: Mana Tombs
	- Auchindoun: Sethekk Halls
	- Auchindoun: Shadow Labyrinth
	- Caverns of Time: Black Morass
	- Caverns of Time: Old Hillsbrad
	- Tempest Keep: The Arcatraz
	- Tempest Keep: The Botanica
	- Tempest Keep: The Mechanar
	- Caverns of Time: The Culling of Stratholme
	- Utgarde Keep
	- Utgarde Pinnacle
	- The Nexus
	- The Oculus
	- Azjol-Nerub
	- Ahn'kahet: The Old Kingdom
	- Ulduar: Halls of Stone
	- Ulduar: Halls of Lightning
	- Drak'Tharon Keep
	- Gundrak
	- The Violet Hold
	- Trial of the Champion
	



Version 4.6.7 (November 30, 2011)

- TOC file updated for Patch 4.3.
- Updated map file locations for Atlas 1.21.0
- Added End Time, Well of Eternity, Hour of Twilight and Dragon Soul.
- Removed Alchemy specialization quests from TK: Botanica & CoT: Black Morass.
- To end some confusion I've re-added Atlas as a Required Dependency for running AtlasQuest and commented out some AlphaMap code.  (thanks Luke1410)
- Fixed a few quest rewards not displaying right.  (thanks kernighan)
- Localizations updated: enUS, deDE

- Quests added:
	- End Time: End Time
	- End Time: Murozond
	- End Time: Archival Purposes
	- Well of Eternity: The Well of Eternity
	- Well of Eternity: In Unending Numbers